Работа над фронтом

--- a/portal/templates/portal/account/vacancy_detail.html
+++ b/portal/templates/portal/account/vacancy_detail.html
@@ -46,4 +46,86 @@
         </div>
     </div>
 </div>
+<div class="job_details_area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="job_details_header">
+                        <div class="single_jobs white-bg d-flex justify-content-between">
+                            <div class="jobs_left d-flex align-items-center">
+                                <div class="thumb">
+                                    <img src="{{ vacancy.company.logo }}" alt="">
+                                </div>
+                                <div class="jobs_conetent">
+                                    <h4>{{ vacancy.title }}</h4>
+                                    <div class="links_locat d-flex align-items-center">
+                                        <div class="location">
+                                            <p> <i class="fa fa-map-marker"></i> {{ vacancy.address }}</p>
+                                        </div>
+                                        <div class="location">
+                                            <p> <i class="fa fa-clock-o"></i> Полная занятость</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="jobs_right">
+                                <div class="apply_now">
+                                    <a class="heart_mark" href="#"> <i class="ti-heart"></i> </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="descript_wrap white-bg">
+                        <div class="single_wrap">
+                            <h4>Описание вакансии</h4>
+                            <p>{{ vacancy.description | linebreaks }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="job_sumary">
+                        <div class="summery_header">
+                            <h3>Резюме работы</h3>
+                        </div>
+                        <div class="job_content">
+                            <ul>
+                                <li>Опубликованно: <span>12 Nov, 2019</span></li>
+                                <li>Компания: <span>{{ vacancy.company.title }}</span></li>
+                                <li>Зарплата: <span>{{ vacancy.salary }}</span></li>
+                                <li>Местонахождение:<br> <span>{{ vacancy.address }}</span></li>
+                                <li>Контактная информация:<br> <span>{{ vacancy.company.contact }}</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="share_wrap d-flex">
+                        <span>Поделиться:</span>
+                        <ul>
+                            <li><a href="#"> <i class="fa fa-facebook"></i></a> </li>
+                            <li><a href="#"> <i class="fa fa-google-plus"></i></a> </li>
+                            <li><a href="#"> <i class="fa fa-twitter"></i></a> </li>
+                            <li><a href="#"> <i class="fa fa-envelope"></i></a> </li>
+                        </ul>
+                    </div>
+                    {% if perms.portal.change_vacancy and vacancy.company.user == request.user %}
+                    <div class="col-md-12">
+                        <div class="submit_btn">
+                            <button class="boxed-btn3 w-100">
+                                <a href="{% url 'portal:edit_vacancy' vacancy.id %}">редактировать</a>
+                            </button>
+                        </div>
+                    </div>
+                    {% endif %}
+                    {% if perms.portal.change_resume %}
+                    <div class="col-md-12">
+                        <div class="submit_btn">
+                            <button class="boxed-btn3 w-100" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Откликнуться
+                            </button>
+                        </div>
+                    </div>
+                    {% include 'portal/account/includes/feedback_resume.html' with type='resume' items=resumes %}
+                    {% endif %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
