--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -1,86 +1,83 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="zxx">
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %} {% endblock %}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link href="https://cdn.jsdelivr.net/npm/suggestions-jquery@21.12.0/dist/css/suggestions.min.css" rel="stylesheet" />
-        <!-- Fengyuan Chen's Datepicker -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
-        <link rel="stylesheet" href="{% static 'news/css/news.css' %}">
+        <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>{% block title %} {% endblock %}</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- <link rel="manifest" href="site.webmanifest"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'news/new/img/favicon.png' %}">
+    <!-- Place favicon.ico in the root directory -->
+
+    <!-- CSS here -->
+    <link rel="stylesheet" href="{% static 'news/new/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'news/new/css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'news/new/css/magnific-popup.css' %}">
+    <link rel="stylesheet" href="{% static 'news/new/css/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'news/new/css/themify-icons.css' %}">
+    <link rel="stylesheet" href="{% static 'news/new/css/nice-select.css' %}">
+    <link rel="stylesheet" href="{% static 'news/new/css/flaticon.css' %}">
+    <link rel="stylesheet" href="{% static 'news/new/css/gijgo.css' %}">
+    <link rel="stylesheet" href="{% static 'news/new/css/animate.min.css' %}">
+    <link rel="stylesheet" href="{% static 'news/new/css/slicknav.css' %}">
+
+    <link rel="stylesheet" href="{% static 'news/new/css/style.css' %}">
+    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
         {% block extra_head %} {% endblock %}
     </head>
     <body>
-        <header>
-            <div class="container">
-                <div class="row align-items-center justify-content-between">
-                    <div class="col-2">
-                        <div class="logo">
-                            <a href="/"><img src="{% static 'news/img/logo.png' %}" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        {% if request.user.is_authenticated %}
-                        {% if perms.portal.change_profile %}
-                            <form method="get" class="search_block" action="{% url 'portal:find_job' %}">
-                              <input name="q" class="form-control" type="text" placeholder="Поиск по вакансиям...">
-                              <button type="submit" class="btn btn-success">Найти</button>
-                            </form>
-                        {% else %}
-                            <form method="get" class="search_block" action="{% url 'portal:find_resume' %}">
-                              <input name="q" class="form-control"  type="text" placeholder="Поиск по резюме...">
-                              <button type="submit" class="btn btn-success">Найти</button>
-                            </form>
-                        {% endif %}
-                        {% endif %}
-                    </div>
-                    <div class="col-6">
-                        <div class="enter text-end">
-                            {% if request.user.is_authenticated %}
-                            <a href="{% url 'portal:dashboard' %}" {% if section == "dashboard" %} class="selected"{% endif %}>Рабочий стол</a>
-                            <a href="{% url 'portal:private' %}" {% if section == "private" %} class="selected"{% endif %}>Личный кабинет</a>
-                            <a href="{% url 'portal:logout' %}">Выйти</a>
-                            {% else %}
-                                <a href="{% url 'portal:login' %}">Войти</a>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <main>
-            {% include 'portal/account/includes/messages.html' %}
-            {% block content %} {% endblock %}
-        </main>
-        <footer class="mt-5">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col">
-                        <div class="logo">
-                            <a href="/"><img src="{% static 'news/img/logo.png' %}" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <h6>{% now 'Y' %}. AlmostHH</h6>
-                    </div>
-                    <div class="col">
-                        <a href="{% url 'news:rules' %}">Правила</a>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- jquery, bootstrap -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <!-- Fengyuan Chen's Datepicker -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js" integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
-        <!-- jquery.formset -->
-        <script src="{% static 'news/js/jquery.formset.js' %}"></script>
-        <!-- dadata suggestions -->
-        <script src="https://cdn.jsdelivr.net/npm/suggestions-jquery@21.12.0/dist/js/jquery.suggestions.min.js"></script>
+    <!-- header-start -->
+    {% include 'news/base_menu.html' %}
+    <!-- header-end -->
 
-        <script src="{% static 'news/js/main.js' %}"></script>
+    <!-- slider_area_start -->
+    {% include 'news/base_slider_area.html' %}
+    <!-- slider_area_end -->
+    <br>
+    <main>
+        {% include 'portal/account/includes/messages.html' %}
+        {% block content %} {% endblock %}
+    </main>
+    <br>
+
+    <!-- footer start -->
+    {% include 'news/footer.html' %}
+    <!--/ footer end  -->
+
+    <!-- link that opens popup -->
+    <!-- JS here -->
+    <script src="{% static 'news/new/js/vendor/modernizr-3.5.0.min.js' %}"></script>
+    <script src="{% static 'news/new/js/vendor/jquery-1.12.4.min.js' %}"></script>
+    <script src="{% static 'news/new/js/popper.min.js' %}"></script>
+    <script src="{% static 'news/new/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'news/new/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'news/new/js/isotope.pkgd.min.js' %}"></script>
+    <script src="{% static 'news/new/js/ajax-form.js' %}"></script>
+    <script src="{% static 'news/new/js/waypoints.min.js' %}"></script>
+    <script src="{% static 'news/new/js/jquery.counterup.min.js' %}"></script>
+    <script src="{% static 'news/new/js/imagesloaded.pkgd.min.js' %}"></script>
+    <script src="{% static 'news/new/js/scrollIt.js' %}"></script>
+    <script src="{% static 'news/new/js/jquery.scrollUp.min.js' %}"></script>
+    <script src="{% static 'news/new/js/wow.min.js' %}"></script>
+    <script src="{% static 'news/new/js/nice-select.min.js' %}"></script>
+    <script src="{% static 'news/new/js/jquery.slicknav.min.js' %}"></script>
+    <script src="{% static 'news/new/js/jquery.magnific-popup.min.js' %}"></script>
+    <script src="{% static 'news/new/js/plugins.js' %}"></script>
+    <script src="{% static 'news/new/js/gijgo.min.js' %}"></script>
+
+
+
+    <!--contact js-->
+    <script src="{% static 'news/new/js/contact.js' %}"></script>
+    <script src="{% static 'news/new/js/jquery.ajaxchimp.min.js' %}"></script>
+    <script src="{% static 'news/new/js/jquery.form.js' %}"></script>
+    <script src="{% static 'news/new/js/jquery.validate.min.js' %}"></script>
+    <script src="{% static 'news/new/js/mail-script.js' %}"></script>
+
+
+    <script src="{% static 'news/new/js/main.js' %}"></script>
     </body>
 </html>
