Работа над фронтом

--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -67,6 +67,7 @@
     <script src="{% static 'news/new/js/jquery.magnific-popup.min.js' %}"></script>
     <script src="{% static 'news/new/js/plugins.js' %}"></script>
     <script src="{% static 'news/new/js/gijgo.min.js' %}"></script>
+    <script src="{% static 'news/new/js/favorites.js' %}"></script>
 
 
 
