--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -28,7 +28,7 @@
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
         {% block extra_head %} {% endblock %}
     </head>
-    <body>
+    <body style="background-color: #f4f7fa">
     <!-- header-start -->
     {% include 'news/base_menu.html' %}
     <!-- header-end -->
