--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'news/new/img/favicon.png' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'news/new/favicon.png' %}">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -72,7 +72,7 @@
 
 
     <!--contact js-->
-    <script src="{% static 'news/new/js/contact.js' %}"></script>
+    <!--<script src="{% static 'news/new/js/contact.js' %}"></script>-->
     <script src="{% static 'news/new/js/jquery.ajaxchimp.min.js' %}"></script>
     <script src="{% static 'news/new/js/jquery.form.js' %}"></script>
     <script src="{% static 'news/new/js/jquery.validate.min.js' %}"></script>
