--- a/portal/templates/portal/account/dashboard.html
+++ b/portal/templates/portal/account/dashboard.html
@@ -29,10 +29,10 @@
         {% for vac in vacancies %}
             <div class="job_listing_area" style="width:100%">
                 <div class="container">
-                    <div class="row" style="width:100%">
+                    <div class="row">
                         <div class="col-lg-9">
                             <div class="job_lists m-0">
-                                <div class="row" style="width:100%">
+                                <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="single_jobs white-bg d-flex justify-content-between">
                                             <div class="jobs_left d-flex align-items-center">
