--- a/portal/templates/portal/account/resume_detail.html
+++ b/portal/templates/portal/account/resume_detail.html
@@ -27,7 +27,7 @@
                                 <h4>{{ resume.title }}</h4>
                                 <div class="links_locat d-flex align-items-center">
                                     <div class="location">
-                                        <p> <i class="fa fa-calendar"></i>{{ resume.schedule }}</p>
+                                        <p> <i class="fa fa-calendar"></i>{{ resume.employment }}</p>
                                     </div>
                                     <div class="location">
                                         <p> <i class="fa fa-clock-o"></i>{{ resume.schedule }}</p>
